making-mobile-friendly

--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
             <li><a href="#"><i class="ri-message-2-fill icon"></i>Messages</a></li>
         </nav>
         <i class="ri-twitter-fill icon twitter"></i>   
-        <img src="https://swastikyadav.github.io/twitter-clone/images/pic.jpg" alt="" class="profile-img" height="50px">
-        <button>Tweet</button>
+        <img src="https://swastikyadav.github.io/twitter-clone/images/pic.jpg" alt="" class="profile-img resize" height="50px" >
+        <button class="resize">Tweet</button>
     </header>
     <div class="container">
         <section class="main-doc">
@@ -27,7 +27,7 @@
                 <section class="profile-detail">
                     <div class="blue-body"></div>
                     <div class="profile">
-                        <img src="https://swastikyadav.github.io/twitter-clone/images/pic.jpg" alt="" class="profile-img" height="100px" width="100px" >
+                        <img src="https://swastikyadav.github.io/twitter-clone/images/pic.jpg" alt="" class="profile-img" max-height="100px" max-width="100px" >
                         <figcaption>
                             <div><strong>Swastikyadav </strong></div>
                             <small><a href="">@codeSwastik</a></small>
@@ -101,7 +101,7 @@
                         <div>
                             <p><i class="ri-hashtag icon">Motivation</i></p>
                             <figure>
-                                <img src="https://pbs.twimg.com/media/D7EQgnkU0AAAYN0?format=jpg&name=small" alt="" width="450px" height="300px">
+                                <img src="https://pbs.twimg.com/media/D7EQgnkU0AAAYN0?format=jpg&name=small" alt="" width="450px" height="300px" class="image-size">
                                 <figcaption>10:43 AM, May21, 2020</figcaption>               
                             </figure>                            
                         </div>
@@ -155,7 +155,7 @@
                         </div>
                         <div>
                             <figure>
-                                <img src="https://pbs.twimg.com/media/D3E91LzWkAYq0RU?format=jpg&name=medium" alt="" width="450px" height="450px">
+                                <img src="https://pbs.twimg.com/media/D3E91LzWkAYq0RU?format=jpg&name=medium" alt="" width="450px" height="450px"class="image-size">
                                 <figcaption>01:43 AM, May21, 2020</figcaption>               
                             </figure>                            
                         </div>
@@ -170,7 +170,7 @@
             <aside id="sidebar3">
                 <!-- taskbar 4 -->
                 <section class="taskbar">
-                    <img src="https://swastikyadav.github.io/twitter-clone/images/delight_prompt_2.png" alt="">
+                    <img src="https://swastikyadav.github.io/twitter-clone/images/delight_prompt_2.png" alt="" class="image-size">
                     <h1>Sneak a peak at the new Twitter</h1>
                     <p>Bookmarks, dark mode, data saver, and more — see all the new features coming to the web.</p>
                     <button>Take A Look</button>
